# ARTES

./: .gitignore  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  setup.py
artes/: __init__.py  _version.py  opacity.py
docs/: Makefile  artes.in.rst  atmosphere.in.rst  conf.py  examples.rst  index.rst  input.rst  installation.rst  opacity.rst  plot.rst  run.rst
python/: PT_gray.py  PT_isothermal.py  atmosphere.py  opacity_henyey.py  opacity_isotropic.py  opacity_rayleigh.py  plot_latitudinal.py  plot_mixing_ratio.py  plot_optical_depth_wavelength.py  plot_spectrum_emission.py  plot_spectrum_reflected.py
src/: ARTES.f90  artes.f90
template/: artes.in  atmosphere.in
tools/: PT_isothermal.py  atmosphere.py  opacity.py  opacity_gas.py  opacity_henyey.py  opacity_mie.py  opacity_molecules.py  plot_global.py  plot_image.py  plot_latitudinal.py  plot_mixing_ratio.py  plot_opacity.py  plot_optical_depth_spatial.py  plot_optical_depth_wavelength.py  plot_phase_curve.py  plot_phase_function.py  plot_pressure_temperature.py  plot_spectrum_emission.py  plot_spectrum_reflected.py  pt_gray.py  pt_isothermal.py
