[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "artes"
authors = [{name = "Tomas Stolker", email = "stolker@strw.leidenuniv.nl"}]
description = "Radiative transfer of polarized light in 3D exoplanet atmospheres"
readme = "README.rst"
requires-python = ">=3.11,<3.14"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy",
    "numpy",
    "scipy",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "jupyter",
    "nbsphinx",
    "pandoc",
    "sphinx",
    "sphinx-automodapi",
    "sphinx_book_theme",
]
test = [
    "black",
    "flake8",
    "pycodestyle",
    "pylint",
    "pytest",
    "pytest-cov",
]

[project.urls]
Documentation = "https://artes.readthedocs.io"
Repository = "https://github.com/tomasstolker/artes"
Issues = "https://github.com/tomasstolker/artes/issues"

[tool.setuptools]
packages = ["artes"]

[tool.setuptools_scm]
write_to = "src/_version.py"
local_scheme = "no-local-version"
